--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -36,6 +36,7 @@
             android:fontFamily="@font/sf_pro_rounded_regular"
             android:gravity="center"
             android:text="CardX"
+            android:textColor="#000000"
             android:textSize="40dp"
             android:textStyle="bold" />
 
@@ -296,6 +297,18 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/imageViewQRCode"
+            android:layout_width="61dp"
+            android:layout_height="67dp"
+            android:layout_marginStart="175dp"
+            android:layout_marginEnd="175dp"
+            android:layout_marginBottom="50dp"
+            android:src="@drawable/qr_code"
+            app:layout_constraintBottom_toTopOf="@+id/logOut"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/logOut"
