--- a/app/src/main/res/layout/qr_code.xml
+++ b/app/src/main/res/layout/qr_code.xml
@@ -21,6 +21,7 @@
             android:paddingLeft="20sp"
             android:paddingTop="20sp"
             android:text="CardX"
+            android:textColor="#000000"
             android:textSize="40dp"
             android:textStyle="bold" />
 
@@ -40,6 +41,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:onClick="go_to_profile"
         android:orientation="horizontal">
 
         <Space
